# fs-uae

./: .gitignore  CMakeLists.txt
cmake/: FSUAEConfigureLegacy.cmake  FSUAESystemDefinitions.cmake  config.h.in
libfsemu/: CMakeLists.txt
manymouse/: CMakeLists.txt
src/: CMakeLists.txt
src/od-fs/: CMakeLists.txt
src/ppc/: CMakeLists.txt
src/ppc/pearpc/: CMakeLists.txt
